--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
         </p>
 
         <p>
-            I live in <strong>Porto, Portugal</strong> and I currently work at <a href="http://movvo.com">Movvo</a>.
+            I live in <strong>Porto, Portugal</strong> and I currently work at <a href="https://jscrambler.com">JScrambler</a>.
         </p>
 
         <p>
