--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,11 @@
     <!--[if lt IE 9]>
     <script src="/scripts/html5shiv.min.js"></script>
     <![endif]-->
-    <script src="/scripts/picturefill.min.js"></script>
+    <script>
+    // Picture element HTML5 shiv
+    document.createElement('picture');
+    </script>
+    <script src="/scripts/picturefill.min.js" async></script>
 </head>
 
 <body>
