--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Hugo Dur&atilde;es - Web developer, crossfitter, husband and father of two... cats.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700">
     <!-- build:css /styles/styles.css -->
     <link rel="stylesheet" type="text/css" href="/styles/styles.css" media="screen, handheld">
     <!-- endbuild -->
