update job description and bio

--- a/app/index.html
+++ b/app/index.html
@@ -44,8 +44,7 @@
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>web developer</strong>, crossfitter, husband and father of two... cats. I'm also unable to
-            type with boxing gloves on. I guess you can't have it all!
+            I'm a <strong>software engineer</strong>, crossfitter, husband and father of two... cats.
         </p>
 
         <p>
