--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Hugo Dur&atilde;es - Web Developer</title>
+    <title>Hugo Dur&atilde;es - Software Engineer</title>
 
-    <meta name="description" content="Hugo Dur&atilde;es - Web developer, crossfitter, husband and father of two... cats.">
+    <meta name="description" content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of three... one human and two cats.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700">
@@ -44,7 +44,7 @@
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>software engineer</strong>, crossfitter, husband and father of two... cats.
+            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of three... one human and two cats.
         </p>
 
         <p>
