--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
     <title>Hugo Dur&atilde;es - Software Engineer</title>
 
-    <meta name="description" content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of three... one human and two cats.">
+    <meta name="description" content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700">
@@ -44,11 +44,11 @@
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of three... one human and two cats.
+            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.
         </p>
 
         <p>
-            I live in <strong>Porto, Portugal</strong> and I currently work at <a href="http://mindera.com">Mindera</a>.
+            I live in <strong>Porto, Portugal</strong> and I currently work at <a href="https://fidel.uk">Fidel</a>.
         </p>
 
         <p>
