--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             <li><a href="https://twitter.com/hugoduraes" title="Twitter"><i class="fa fa-twitter fa-3x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/hugoduraes" title="LinkedIn"><i class="fa fa-linkedin fa-3x"></i></a></li>
             <li><a href="https://github.com/hugoduraes" title="GitHub"><i class="fa fa-github fa-3x"></i></a></li>
-            <li><a href="mailto:me@hugoduraes.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
+            <li><a href="mailto:mail@hugoduraes.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
         </ul>
     </div>
 </section>
