--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,119 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
     <title>Hugo Dur&atilde;es - Software Engineer</title>
 
-    <meta name="description" content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta
+      name="description"
+      content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of three... one human and two cats."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Lato:300,700"
+    />
     <!-- build:css /styles/styles.css -->
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css" media="screen, handheld">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/styles/styles.css"
+      media="screen, handheld"
+    />
     <!-- endbuild -->
 
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <!--[if lt IE 9]>
-    <script src="/scripts/html5shiv.min.js"></script>
+      <script src="/scripts/html5shiv.min.js"></script>
     <![endif]-->
     <script>
-    // Picture element HTML5 shiv
-    document.createElement('picture');
+      // Picture element HTML5 shiv
+      document.createElement("picture");
     </script>
     <script src="/scripts/picturefill.min.js" async></script>
-</head>
+  </head>
 
-<body>
-
-<header>
-    <div>
+  <body>
+    <header>
+      <div>
         <a href="/">
-            <picture>
-                <img src="/images/me.jpg"
-                     srcset="/images/me.jpg 1x, /images/me-2x.jpg 2x, /images/me-3x.jpg 3x"
-                     alt="Hugo Dur&atilde;es profile photo" title="Hugo Dur&atilde;es" width="50" height="50">
-            </picture>
+          <picture>
+            <img
+              src="/images/me.jpg"
+              srcset="
+                /images/me.jpg    1x,
+                /images/me-2x.jpg 2x,
+                /images/me-3x.jpg 3x
+              "
+              alt="Hugo Dur&atilde;es profile photo"
+              title="Hugo Dur&atilde;es"
+              width="50"
+              height="50"
+            />
+          </picture>
         </a>
-    </div>
-</header>
+      </div>
+    </header>
 
-<section class="cover">
-    <div>
+    <section class="cover">
+      <div>
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.
+          I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee
+          lover, husband and father of three... one human and two cats.
         </p>
 
         <p>
-            I'm based in <strong>Porto, Portugal</strong> and I currently work at <a href="https://fidelapi.com">Fidel API</a>.
+          I'm based in <strong>Porto, Portugal</strong> and I currently work at
+          <a href="https://fidelapi.com">Fidel API</a>.
         </p>
 
         <p>
-            If you wish to get in touch, feel free to do it through the following platforms:
+          If you wish to get in touch, feel free to do it through the following
+          platforms:
         </p>
 
         <ul>
-            <li><a href="https://twitter.com/hugoduraes" title="Twitter"><i class="fa fa-twitter fa-3x"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/hugoduraes" title="LinkedIn"><i class="fa fa-linkedin fa-3x"></i></a></li>
-            <li><a href="https://github.com/hugoduraes" title="GitHub"><i class="fa fa-github fa-3x"></i></a></li>
-            <li><a href="mailto:mail@hugoduraes.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
+          <li>
+            <a href="https://twitter.com/hugoduraes" title="Twitter"
+              ><i class="fa fa-twitter fa-3x"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/hugoduraes" title="LinkedIn"
+              ><i class="fa fa-linkedin fa-3x"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/hugoduraes" title="GitHub"
+              ><i class="fa fa-github fa-3x"></i
+            ></a>
+          </li>
+          <li>
+            <a href="mailto:mail@hugoduraes.com" title="Email"
+              ><i class="fa fa-envelope fa-3x"></i
+            ></a>
+          </li>
         </ul>
-    </div>
-</section>
+      </div>
+    </section>
 
-<footer>
-    <div>
+    <footer>
+      <div>
         <p>
-            Developed and maintained by <a href="http://hugoduraes.com">Hugo Dur&atilde;es</a>.
-            Background image by <a href="https://www.flickr.com/photos/raphaelchekroun/8049815553/">Rapha&euml;l Chekroun</a>.
+          Developed and maintained by
+          <a href="http://hugoduraes.com">Hugo Dur&atilde;es</a>. Background
+          image by
+          <a href="https://www.flickr.com/photos/raphaelchekroun/8049815553/"
+            >Rapha&euml;l Chekroun</a
+          >.
         </p>
-    </div>
-</footer>
-
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
