update work place

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         </p>
 
         <p>
-            I'm based in <strong>Porto, Portugal</strong> and I currently work at <a href="https://fidelapi.com">Fidel API</a>.
+            I'm based in <strong>Porto, Portugal</strong> and I currently work at <a href="https://astrada.co">Astrada</a>.
         </p>
 
         <p>
