update bio, photo, and social media links

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.
+            I'm a <strong>software engineer</strong>, crossfitter, coffee lover, husband and father of three... one human and two cats.
         </p>
 
         <p>
@@ -56,10 +56,8 @@
         </p>
 
         <ul>
-            <li><a href="https://twitter.com/hugoduraes" title="Twitter"><i class="fa fa-twitter fa-3x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/hugoduraes" title="LinkedIn"><i class="fa fa-linkedin fa-3x"></i></a></li>
             <li><a href="https://github.com/hugoduraes" title="GitHub"><i class="fa fa-github fa-3x"></i></a></li>
-            <li><a href="mailto:mail@hugoduraes.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
         </ul>
     </div>
 </section>
