--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
     <title>Hugo Dur&atilde;es - Software Engineer</title>
 
-    <meta name="description" content="Hugo Dur&atilde;es - Software engineer, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.">
+    <meta name="description" content="Hugo Dur&atilde;es - software engineer, crossfitter, coffee lover, husband and father of three... one human and two cats.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:300,700">
@@ -44,7 +44,7 @@
         <h1>Hi, my name is <strong>Hugo Dur&atilde;es</strong>.</h1>
 
         <p>
-            I'm a <strong>software engineer</strong>, crossfit enthusiast, coffee lover, husband and father of two... one human and one cat.
+            I'm a <strong>software engineer</strong>, crossfitter, coffee lover, husband and father of three... one human and two cats.
         </p>
 
         <p>
@@ -56,10 +56,8 @@
         </p>
 
         <ul>
-            <li><a href="https://twitter.com/hugoduraes" title="Twitter"><i class="fa fa-twitter fa-3x"></i></a></li>
             <li><a href="https://www.linkedin.com/in/hugoduraes" title="LinkedIn"><i class="fa fa-linkedin fa-3x"></i></a></li>
             <li><a href="https://github.com/hugoduraes" title="GitHub"><i class="fa fa-github fa-3x"></i></a></li>
-            <li><a href="mailto:mail@hugoduraes.com" title="Email"><i class="fa fa-envelope fa-3x"></i></a></li>
         </ul>
     </div>
 </section>
