fix: add https to footer link

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 <footer>
     <div>
         <p>
-            Developed and maintained by <a href="http://hugoduraes.com">Hugo Dur&atilde;es</a>.
+            Developed and maintained by <a href="https://hugoduraes.com">Hugo Dur&atilde;es</a>.
             Background image by <a href="https://www.flickr.com/photos/raphaelchekroun/8049815553/">Rapha&euml;l Chekroun</a>.
         </p>
     </div>
